crates/toml/tests/snapshots/invalid/ext/not-toml/deb.stderr
TOML parse error at line 1, column 10
  |
1 | Package: R6
  |          ^
key with no value, expected `=`

---
TOML parse error at line 2, column 10
  |
2 | Version: 2.5.1
  |          ^
key with no value, expected `=`

---
TOML parse error at line 3, column 10
  |
3 | Depends: R (>= 3.0)
  |          ^
key with no value, expected `=`

---
TOML parse error at line 4, column 11
  |
4 | Suggests: testthat, pryr
  |           ^
key with no value, expected `=`

---
TOML parse error at line 5, column 19
  |
5 | NeedsCompilation: no
  |                   ^
key with no value, expected `=`

---
TOML parse error at line 6, column 10
  |
6 | License: MIT + file LICENSE
  |          ^
key with no value, expected `=`

---
TOML parse error at line 1, column 8
  |
1 | Package: R6
  |        ^
invalid unquoted key, expected letters, numbers, `-`, `_`
